test/instance-checks-3.ktn
define example<a> (a -> int): ->x; x
